--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo"
@@ -51,15 +51,15 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="solutions">
+      <!-- <section class="solutions">
         <div class="container">
           <h1 class="solution-title">Effective Solutions for Your Business</h1>
           <button type="button" class="solution-btn">Order Service</button>
         </div>
-      </section>
+      </section> -->
 
       <section class="principles">
         <div class="container">
@@ -117,7 +117,7 @@
           </ul>
         </div>
       </section>
-
+<!-- 
       <section class="team">
         <div class="container">
           <h2 class="title">Our Team</h2>
@@ -296,9 +296,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -425,9 +425,9 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-con">
         <div class="footer-con-logo">
           <a href="./index.html" class="footer-logo"
@@ -492,7 +492,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="backdrop">
       <div class="modal">
