--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </section> -->
 
-      <section class="principles">
+      <!-- <section class="principles">
         <div class="container">
           <h2 class="visually-hidden">principles</h2>
           <ul class="principles-list">
@@ -116,9 +116,9 @@
             </li>
           </ul>
         </div>
-      </section>
-<!-- 
-      <section class="team">
+      </section> -->
+
+      <!-- <section class="team">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="team-list">
@@ -298,7 +298,7 @@
         </div>
       </section> -->
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -425,7 +425,7 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
     <!-- <footer class="footer">
       <div class="container footer-con">
