--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
   <body>
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo"
@@ -50,8 +50,13 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="head-open-btn">
+          <svg width="24" height="24">
+            <use href="./images/icons.svg#icon-menu-icon"></use>
+          </svg>
+        </button>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- <section class="solutions">
@@ -298,7 +303,7 @@
         </div>
       </section> -->
 
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -425,7 +430,7 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- <footer class="footer">
       <div class="container footer-con">
