--- a/index.html
+++ b/index.html
@@ -59,14 +59,16 @@
     </header>
 
     <main>
-      <!-- <section class="solutions">
-        <div class="container">
-          <h1 class="solution-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="solution-btn">Order Service</button>
-        </div>
-      </section> -->
+      <section class="solutions-top">
+        <div class="container container-solution">
+         <div class="solutions">
+            <h1 class="solution-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="solution-btn">Order Service</button>
+          
+         </div></div>
+      </section>
 
-      <!-- <section class="principles">
+      <section class="principles">
         <div class="container">
           <h2 class="visually-hidden">principles</h2>
           <ul class="principles-list">
@@ -121,7 +123,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="team">
         <div class="container">
