--- a/index.html
+++ b/index.html
@@ -61,11 +61,13 @@
     <main>
       <section class="solutions-top">
         <div class="container container-solution">
-         <div class="solutions">
-            <h1 class="solution-title">Effective Solutions for Your Business</h1>
+          <div class="solutions">
+            <h1 class="solution-title">
+              Effective Solutions for Your Business
+            </h1>
             <button type="button" class="solution-btn">Order Service</button>
-          
-         </div></div>
+          </div>
+        </div>
       </section>
 
       <section class="principles">
@@ -125,7 +127,7 @@
         </div>
       </section>
 
-      <!-- <section class="team">
+      <section class="team">
         <div class="container">
           <h2 class="title">Our Team</h2>
           <ul class="team-list">
@@ -303,9 +305,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container">
           <h2 class="title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -432,9 +434,9 @@
           </ul>
         </div>
       </section>
-    </main> -->
+    </main>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-con">
         <div class="footer-con-logo">
           <a href="./index.html" class="footer-logo"
@@ -499,7 +501,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="backdrop">
       <div class="modal">
