--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
           <ul class="team-list">
             <li class="team-item">
               <img
+                srcset="./images/img_1-2x.jpg 2x, ./images/img_1.jpg 1x"
                 src="./images/img_1.jpg"
                 alt="Mark Guerrero"
                 width="264"
@@ -176,6 +177,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img_2-2x.jpg 2x, ./images/img_2.jpg 1x"
                 src="./images/img_2.jpg"
                 alt="Tom Ford"
                 width="264"
@@ -219,6 +221,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img_3-2x.jpg 2x, ./images/img_3.jpg 1x"
                 src="./images/img_3.jpg"
                 alt="Camila Garcia"
                 width="264"
@@ -262,6 +265,7 @@
             </li>
             <li class="team-item">
               <img
+                srcset="./images/img_4-2x.jpg 2x, ./images/img_4.jpg 1x"
                 src="./images/img_4.jpg"
                 alt="Daniel Wilson"
                 width="264"
