--- a/index.html
+++ b/index.html
@@ -56,6 +56,78 @@
           </svg>
         </button>
       </div>
+
+      <div class="mob-menu">
+        <div>
+          <button type="button" class="mob-menu-close">
+            <svg class="mob-btn-close-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav>
+            <ul class="mob-logo-item">
+              <li class="mob-logo-item-link">
+                <a href="" class="mob-logo-link">Studio</a>
+              </li>
+              <li class="mob-logo-item-link">
+                <a href="" class="mob-logo-link">Portfolio</a>
+              </li>
+              <li class="mob-logo-item-link">
+                <a href="" class="mob-logo-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+
+        <div>
+          <ul class="mob-address-item">
+            <li class="mob-address-item-link">
+              <a
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="mob-address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="mob-address-item-link">
+              <a href="tel:+110001111111" class="mob-address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          <ul class="mob-item-list">
+            <li class="mob-item-list-fon">
+              <a href="" class="mob-lin-icon">
+                <svg class="mob-item-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-item-list-fon">
+              <a href="" class="mob-lin-icon">
+                <svg class="mob-item-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-item-list-fon">
+              <a href="" class="mob-lin-icon">
+                <svg class="mob-item-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="mob-item-list-fon">
+              <a href="" class="mob-lin-icon">
+                <svg class="mob-item-icon" width="16" height="16">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </header>
 
     <main>
