--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <nav>
             <ul class="mob-logo-item">
               <li class="mob-logo-item-link">
-                <a href="" class="mob-logo-link">Studio</a>
+                <a href="" class="mob-logo-link mob-current">Studio</a>
               </li>
               <li class="mob-logo-item-link">
                 <a href="" class="mob-logo-link">Portfolio</a>
@@ -83,6 +83,13 @@
           <ul class="mob-address-item">
             <li class="mob-address-item-link">
               <a
+                href="tel:+110001111111"
+                class="mob-address-link mob-address-link-cur"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="mob-address-item-link">
+              <a
                 href="mailto:info@devstudio.com"
                 target="_blank"
                 rel="noopener noreferrer nofollow"
@@ -90,37 +97,32 @@
                 >info@devstudio.com</a
               >
             </li>
-            <li class="mob-address-item-link">
-              <a href="tel:+110001111111" class="mob-address-link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
           </ul>
           <ul class="mob-item-list">
             <li class="mob-item-list-fon">
               <a href="" class="mob-lin-icon">
-                <svg class="mob-item-icon" width="16" height="16">
+                <svg class="mob-item-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="mob-item-list-fon">
               <a href="" class="mob-lin-icon">
-                <svg class="mob-item-icon" width="16" height="16">
+                <svg class="mob-item-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="mob-item-list-fon">
               <a href="" class="mob-lin-icon">
-                <svg class="mob-item-icon" width="16" height="16">
+                <svg class="mob-item-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="mob-item-list-fon">
               <a href="" class="mob-lin-icon">
-                <svg class="mob-item-icon" width="16" height="16">
+                <svg class="mob-item-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -717,7 +719,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="btn-close-icon" width="8" height="8">
