--- a/index.html
+++ b/index.html
@@ -719,7 +719,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="btn-close-icon" width="8" height="8">
